# CMake-and-C

./: .gitignore  README.md
recipe-01/: CMakeLists.txt  README.md  hello-world.c
recipe-03/: CMakeLists.txt  README.md  message.c  message.h
recipe-04/: CMakeLists.txt  README.md  hello-world.c
